welcome.lessons.welcome.bat.bool1.LoneTeen.scala.code
def loneTeen(a:Int, b:Int):Boolean = {
  var ateen = false
  ateen = (13<=a && a<=19 )
  bteen = (13<=b && b<=19 )
  return ateen != bteen